# mesh-client

./: .cursorignore  .gitignore  .npmrc  .prettierignore  404.html  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DIAGNOSTICS.md  PLAN.md  README.md  SECURITY.md  electron-builder.yml  eslint.config.mjs  index.html  mkdocs.yml  org.coloradomesh.MeshClient.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh  tsconfig.main.json  tsconfig.strict.json  vite.config.ts  vitest.config.ts  vitest.harness.test.ts  vitest.harness.ts
.githooks/: pre-commit
.github/: FUNDING.yml  actionlint.yaml  dependabot.yml  release.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  translation-error.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: a11y.yaml  build.yaml  (+8 more)
accessibility-checklist/: index.html
ci-cd/: index.html
contributing/: index.html
credits/: index.html
development-environment/: index.html
diagnostics/: index.html
docs/: accessibility-checklist.md  ci-cd.md  contributing.md  credits.md  development-environment.md  diagnostics.md  hook-deconstruction-ingress.md  index.md  key-backup-and-crypto.md  letsmesh-mqtt-auth.md  license.md  localization.md  meshcore-deferred-epics.md  meshcore-meshtastic-parity.md  release-process.md  renderer-side-effect-migration.md  requirements.txt  reticulum-sidecar-ipc.md  reticulum.md  troubleshooting.md
flatpak/: mesh-client-wrapper.sh  org.coloradomesh.MeshClient.desktop  org.coloradomesh.MeshClient.metainfo.xml
key-backup-and-crypto/: index.html
letsmesh-mqtt-auth/: index.html
license/: index.html
localization/: index.html
meshcore-deferred-epics/: index.html
meshcore-meshtastic-parity/: index.html
patches/: @jsr__meshtastic__core@2.6.6.patch  @jsr__meshtastic__transport-web-serial@0.2.5.patch  @liamcottle__meshcore.js@1.13.0.patch  @stoprocent__noble@2.5.5.patch  app-builder-lib+26.8.2.patch  usb@2.17.0.patch  usb@2.18.0.patch
release-process/: index.html
resources/: installer.nsh
reticulum-sidecar/: .gitignore  Cargo.toml  README.md
reticulum-sidecar/src/: lxmf_stack.rs  main.rs  rns_stack.rs  state.rs
reticulum-sidecar/src/api/: config.rs  identity.rs  interfaces.rs  lxmf.rs  mod.rs  nomad.rs  propagation.rs  status.rs  system.rs  ws.rs
reticulum-sidecar/src/stack/: ble.rs  config.rs  live.rs  lxmf_outbound.rs  mod.rs  nomad_file.rs  nomad_timeouts.rs  packet_log.rs  persistence.rs  propagation_bridge.rs  topology.rs  types.rs  via.rs
scripts/: check-codeql-extensions.mjs  check-console-log.mjs  check-db-migrations.mjs  check-flatpak.mjs  check-i18n-quality.mjs  check-i18n-quality.test.mjs  check-i18n.mjs  check-i18n.test.mjs  check-ipc-contract.mjs  check-log-injection.mjs  check-log-panel-filter.mjs  check-protocol-string-gates.mjs  check-silent-catches.mjs  check-url-hostname-sanitization.mjs  check-xss-patterns.mjs  clean-jsr-temp-dirs.mjs  clean-jsr-temp-dirs.test.mjs  dist-win-hoisted-install.mjs  dist-win-hoisted-install.test.mjs  dist-win-restore-node-modules.mjs  dist-win-restore-node-modules.test.mjs  electron-builder-after-pack.cjs  esbuild-main-build.mjs  esbuild-main-externals.mjs  find-nsis-app-archive.mjs  find-nsis-app-archive.test.mjs  flatpak-pnpm-install.mjs  flatpak-pnpm-install.test.mjs  gen-firmware-configs.mjs  i18n-auto-translate-lib.mjs  i18n-auto-translate-lib.test.mjs  i18n-auto-translate.mjs  i18n-unused-keys.mjs  i18n-unused-keys.test.mjs  letsmesh-mqtt-probe.mjs  linux-dev.mjs  print-main-bundle-size.mjs  prune-i18n-unused.mjs  rebuild-native.mjs  release.sh  (+11 more)
search/: search_index.json
troubleshooting/: index.html
(+1007 files in other folders)
