[package]
name = "mesh-client-reticulum-sidecar"
version = "0.1.0"
edition = "2021"
description = "Headless Reticulum/LXMF daemon for mesh-client"
license = "AGPL-3.0-or-later"

[[bin]]
name = "mesh-client-reticulum"
path = "src/main.rs"

[features]
default = []
# Enable rsReticulum + rsLXMF git deps (dev / release full stack).
rns-stack = []

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase B: pin git revs when enabling rns-stack (coordinate with Ratspeak releases):
# [dependencies.rns-runtime]
# package = "rns-runtime"
# git = "https://github.com/ratspeak/rsReticulum"
# rev = "..."
# optional = true
#
# [dependencies.lxmf-core]
# package = "lxmf-core"
# git = "https://github.com/ratspeak/rsLXMF"
# rev = "..."
# optional = true
